# babynames

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  LICENSE  README.md  battle.css  boys.csv  elo.js  glicko.js  grid.js  index.html  manifest.json  package.json  preview-mockup.html  pyproject.toml  requirements.txt  server.py  swipe.js
.github/: FUNDING.yml
.github/workflows/: build.yaml  ci.yml  generate.yml  pages.yml
babynames/.specify/: init-options.json
backend/: alembic.ini  pyproject.toml
backend/babynames/: logging.py
backend/babynames/api/: auth.py  deps.py  main.py
backend/babynames/api/routes/: favourites.py  names.py  ranking.py  sessions.py
backend/babynames/db/: config.py  models.py  seed.py
backend/babynames/db/migrations/: env.py
backend/babynames/ranking/: glicko2.py
backend/tests/unit/: test_glicko2.py
data/: boys.csv
docs/: grid.js  index.html  index.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/adapter-node/: index.js  internal.js  manifest.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
images/: generate_graph.py
raw/: biblical_names.csv  forced_merges.csv  name_origins.csv  nicknames.csv  pronunciation_overrides.csv  yob1886.txt  yob1895.txt  yob1903.txt  yob1915.txt  yob1916.txt  yob1919.txt  yob1921.txt  yob1926.txt  yob1928.txt  yob1929.txt  yob1931.txt  yob1932.txt  yob1933.txt  yob1934.txt  yob1937.txt  yob1939.txt  yob1940.txt  yob1941.txt  yob1943.txt  yob1945.txt  yob1947.txt  yob1950.txt  yob1951.txt  yob1952.txt  yob1958.txt  yob1960.txt  yob1961.txt  yob1966.txt  yob1968.txt  yob1972.txt  yob1973.txt  yob1977.txt  yob1978.txt  yob1979.txt  yob1981.txt  (+11 more)
raw/territories/: PR.TXT  TR.TXT
scripts/: audit_name_groups.py  audit_nicknames.py  enrich.py  find_missing_merges.py
specs/001-baby-name-ranker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-baby-name-ranker/checklists/: requirements.md
specs/001-baby-name-ranker/contracts/: api.md
src/: babynames.py  requirements.in  requirements.txt
src/data/: biblical_names.csv
src/data/babynames/: yob1883.txt  yob1887.txt  yob1891.txt  yob1900.txt  yob1905.txt  yob1907.txt  yob1908.txt  yob1912.txt  yob1913.txt  yob1914.txt  yob1918.txt  yob1920.txt  yob1922.txt  yob1923.txt  yob1924.txt  yob1925.txt  yob1927.txt  yob1930.txt  yob1935.txt  yob1936.txt  yob1938.txt  yob1942.txt  yob1944.txt  yob1946.txt  yob1948.txt  yob1949.txt  yob1953.txt  yob1954.txt  yob1955.txt  yob1956.txt  yob1957.txt  (+45 more)
tests/: conftest.py  test_output.py  test_phonetics.py  test_pipeline.py
tests/fixtures/: biblical_names.csv  forced_merges.csv  nicknames.csv  pronunciation_overrides.csv
(+43 files in other folders)
