[project]
name = "babynames"
version = "2.0.0"
description = "Baby name analysis using SSA data with phonetic deduplication"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.10,<2",
    "cmudict>=1.0",
]

[project.scripts]
babynames = "src.babynames:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP040"]  # TypeAlias -> type keyword; requires Python 3.12+ runtime

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
