[project]
name = "babynames"
version = "2.2.0"
description = "Baby name analysis using SSA data with phonetic deduplication"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.20,<2",
    "cmudict>=1.1,<2",
    "nltk>=3.9.1",
]

[project.optional-dependencies]
g2p = [
    "g2p-en>=2.1,<3",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
babynames = "src.babynames:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP040"]  # TypeAlias -> type keyword; requires Python 3.12+ runtime

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
